# base-sbu

./: .MAKEFILE.swp  .gitignore  BaSe_SBC.atsln  CMakeLists.txt  Makefile  compile_commands.json  platformio.ini  project.yml  readme.md
BaSe_SBC/: BaSe_SBC.componentinfo.xml  BaSe_SBC.cproj  adc.c  adc.h  flags.c  flags.h  gpio_interface (conflicted copy 2021-01-11 195512).c  gpio_interface (conflicted copy 2021-01-11 195526).h  gpio_interface.c  gpio_interface.h  heartbeat.c  heartbeat.h  hmi.c  hmi.h  main.c  menu.c  menu.h  powerpath_control (conflicted copy 2021-01-11 195603).c  powerpath_control.c  powerpath_control.h  rtc.c  rtc.h  usart.c  usart.h
BaSe_SBC/Debug/: BaSe_SBC.elf  BaSe_SBC.hex  BaSe_SBC.lss  BaSe_SBC.map  BaSe_SBC.srec  BaSe_SBC_PORTB_Interupt_works.hex  BaSe_SBC_TastenDruck_laesst_LED_leuchten.hex  BaSe_SBC_led_hmi_blinks_to_bpi_hb.hex  BaSe_SBC_wakeup_reason_implementation_correct_ack.hex  Makefile  adc.d  flags.d  gpio_interface.d  heartbeat.d  hmi.d  main.d  makedep.mk  menu.d  pin_interface.d  powerpath_control.d  rtc.d  usart.d
BaSe_SBC/Snapshots/: AtTiny816_USART_sendet_laufend_Hallo.hex  BaSe_SBC_display_no_longer_driven_in_standby.hex  BaSe_SBC_sends_HB_via_USART_and_writes_to_display.hex  (+3 more)
include/: bcu.h  delay.h  flags.h  globals.h  hal.h  mainloops.h  menu.h  statemachine.h  usart.h
src/: CMakeLists.txt  bcu.c  delay.c  flags.c  hal.c  main.c  mainloops.c  menu.c  statemachine.c  usart.c
test/: a.out  test_bcu.c  test_hal_led.c  test_logging.c  test_menu.c  test_statemachine.c  test_usart.c  uart_string_stuff_text.c
(+30 files in other folders)
